# I-know-kungfu

./: .gitignore  CONTEXT.md  NOTES.md  README.md  index.html  pyproject.toml
data/: cookbook-registry.json
docs/: PRD.md
docs/adr/: 0001-knowledge-base-wiki-is-core-object.md  0002-graphify-context-fit-adapter.md
docs/demo/: graphify-backed-context-fit.md  phase2-real-data-cookbook.md
docs/handoff/: 2026-06-19-cookbook-serving-prototype-handoff.md  2026-06-19-prd-context-modeling-handoff.md  2026-06-19-prototype-session.md
docs/research/: 2026-06-19-brainstorm.md
docs/roadmap/: phase2-real-data-productization.md
prototype/cookbook-serving/: NOTES.md  index.html
scripts/: demo.py  graphify_fit_demo.py  phase2_real_data_demo.py
src/iknow/: __init__.py  __main__.py  cli.py
src/iknow/compiler/: __init__.py  artifacts.py  compile.py  config.py  manifest.py
src/iknow/contracts/: __init__.py  loader.py  model.py  validate.py
src/iknow/cookbook/: __init__.py  export.py
src/iknow/fit/: __init__.py  compare.py  result.py
src/iknow/harmonization/: __init__.py  decisions.py
tests/: test_cli.py  test_contracts.py  test_demo_flow.py  test_issue10.py  test_issue12.py  test_issue13.py  test_issue14.py  test_issue15.py  test_issue16.py  test_issue17.py  test_issue19.py  test_issue20.py  test_issue21.py  test_issue22.py  test_issue23.py  test_issue24.py  test_issue25.py  test_issue26.py  test_issue5.py  test_issue6.py  test_issue7.py  test_issue8.py  test_registry.py
tests/fixtures/: inferred_contract.json  missing_fields_contract.json  valid_contract.json
(+40 files in other folders)
