[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iknow"
version = "0.1.0"
description = "Local control-plane for I-know-kungfu — grow your knowledge base with proven wikis"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
iknow = "iknow.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]